Added decimal separators to input.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="yearly_payment">Yearly Payment</string>
     <string name="monthly_payment">Monthly Payment</string>
     <string name="hourly_payment">Hourly Payment</string>
+    <string name="no_number_entered_hint">Add a payment...</string>
 </resources>
